--- a/WP_1/web_1.html
+++ b/WP_1/web_1.html
@@ -12,77 +12,101 @@
     <ol>
         <li><a href="https://www.youtube.com/watch?v=VyEJs-u3Wyk" target = "blank" title="뻥이고 데이식스 타이틀곡 모음이야">학생정보 및 학점관리</a> </li>       </li>
         <li><a href= "https://www.daum.net"  title ="안녕 너는 누구니?" target ="blank">학생입 휴학 관리</a></li>
-        <!--
-            ol = 순서가 있는 리스트 
-            target ="blank" 새 창에서 열기
-            title ="마우스 커서 올렸을 떄 보이는 거" 순서는 노상관>
-            <li>학생 기숙사 관리</li>
-            <li>환경설정</li>
-         -->
+        <li>학생 기숙사 관리</li>
+        <li>환경설정</li>
     </ol>
-    <table>
+    <table id = "table">
+        <thead>
         <tr id="head">
-            <!-- tr => tale row 테이블 가로 한 줄 -->
-            <!-- th => table head 테이블 헤더 표시 -->
-            <th class="chk">선택</th>
-            <th class="name">이름</th>
-            <th class="number">학번</th>
-            <th class="age">나이</th>
-            <th class="grade">학점</th>
-            <th class="exp">비고</th>
-        </tr>
-        <tr>
-            <td ><input type ="checkbox"></td>
-            <td>박제형</td>
-            <td>2011XXXX</td>
-            <td>29</td>
-            <td>A+</td>
-            <td>정치학과</td>
-        </tr>
-        <tr>
-            <td ><input type ="checkbox"></td>
-            <td>박성진</td>
-            <td>2011XXXX</td>
-            <td>29</td>
-            <td>A+</td>
-            <td>뭐라할과</td>
-        </tr>
-        <tr>
-            <td ><input type ="checkbox"></td>
-            <td>강영현</td>
-            <td>2012XXXX</td>
-            <td>28</td>
-            <td>A++</td>
-            <td>경영학과</td>
-        </tr>
-        <tr>
-            <td ><input type ="checkbox"></td>
-            <td>김원필</td>
-            <td>2013XXXX</td>
-            <td>27</td>
-            <td>A+</td>
-            <td>모델학과</td>
-        </tr>
-        <tr>
-            <td ><input type ="checkbox"></td>
-            <td>윤도운</td>
-            <td>2014XXXX</td>
-            <td>26</td>
-            <td>A+</td>
-            <td>실용음악과</td>
-        </tr>
+                <th>선택</th>
+                <th class="name">이름</th>
+                <th class="number">학번</th>
+                <th class="age">나이</th>
+                <th class="grade">학점</th>
+                <th class="exp">비고</th>
+            </tr>
+        </thead>
+        <tbody id = "tbody">
+            <tr class = "content">
+                <td ><input class="chk" type ="checkbox"></td>
+                <td>박제형</td>
+                <td>2011XXXX</td>
+                <td>29</td>
+                <td class="grade">A+</td>
+                <td>정치학과</td>
+            </tr>
+            <tr class = "content">
+                <td ><input class="chk" type ="checkbox"></td>
+                <td>박성진</td>
+                <td>2011XXXX</td>
+                <td>29</td>
+                <td class="grade">A+</td>
+                <td>뭐라할과</td>
+            </tr>
+            <tr class = "content">
+                <td ><input class="chk" type ="checkbox"></td>
+                <td>강영현</td>
+                <td>2012XXXX</td>
+                <td>28</td>
+                <td class="grade">A+</td>
+                <td>경영학과</td>
+            </tr>
+            <tr class = "content">
+                <td ><input class="chk" type ="checkbox"></td>
+                <td>김원필</td>
+                <td>2013XXXX</td>
+                <td>27</td>
+                <td class="grade">A+</td>
+                <td>모델학과</td>
+            </tr>
+            <tr class = "content">
+                <td ><input class="chk" type ="checkbox"></td>
+                <td>윤도운</td>
+                <td>2014XXXX</td>
+                <td>26</td>
+                <td class="grade">A+</td>
+                <td>실용음악과</td>
+            </tr>
+        </tbody>
     </table>
+    <p></p>
     <br><i><strong> 족보브레이커 박성진</strong></i><br>
     <br>
-    <input type="button" value ="학생 추가"></input>
-    <input type="button" value ="학생 삭제"></input>
+
+    <!-- 학생 정보 추가용 테이블 -->
+    <h4>[학생 추가]</h4>
+    <table>
+        <thead>
+            <tr id="add_head">
+                <th>이름*</th>
+                <th>학번*</th>
+                <th>나이*</th>
+                <th>학점*</th>
+                <th>비고</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr id = input>
+                <td><input id ="input_name" type="text"></td>
+                <td><input id ="input_number" type="text"></td>
+                <td><input id ="input_age" type="text"></td>
+                <td><input id ="input_grade" type="text"></td>
+                <td><input id ="input_exp" type="text"></td>
+            </tr>
+        </tbody>
+    </table>
+    <p id = "input">* -> 필수 기입</p>
+    <!--                      -->
+
+
+    <input id ="add" type="button" value ="학생 추가"></input>
+    <input id = "delete"type="button" value ="학생 삭제"></input>
 
     <p>
-    평균 학점 :
+    평균 학점 : <span id = avgGrade></span><br><br>
+    총 인원: <span id="total"></span><br><br>
     </p>
-    총 인원:
-    <br/>
-    <iframe src="http://plus.cnu.ac.kr/html/kr/intro.html"></iframe>
     
 </body>
+<script src="js/js.js"></script>
 </html>
